--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -50,8 +50,8 @@
             @foreach (MediaRow media in albumMedia)
             {
                 <div class="thumbnail">
-                    <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
-                    <img @onclick="(() => ImgClicked(media.uuid.ToString(), media.path))" style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
+                    <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
+                    <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
                 </div>
             }
          </div>
