Move components stylesheets into dedicated folder

--- a/PSS/Shared/AlbumSelector.razor
+++ b/PSS/Shared/AlbumSelector.razor
@@ -1,6 +1,6 @@
 @* Reusable component that allows user to choose album(s) to add selected items to *@
 @using static PSS.Backend.Connection
-<link href="css/AlbumSelector.css" rel="stylesheet">
+<link href="/css/components/AlbumSelector.css" rel="stylesheet">
 
 <div id="albumSelector" style="visibility: @AlbumsVis">
      <button id="closeBtn" @onclick="CloseBtnClick"><span class="material-icons-outlined">close</span></button>
