--- a/PSS/Shared/TwoChoiceInput.razor
+++ b/PSS/Shared/TwoChoiceInput.razor
@@ -11,7 +11,7 @@
     3. String PositioningStyle. Styling used for positioning this thing. Defaults to center of screen, but can be changed to like absolute position and top right corner of screen. 
 *@
 @using PSS.Backend
-<link href="css/TwoChoiceInput.css" rel="stylesheet">
+<link href="css/components/TwoChoiceInput.css" rel="stylesheet">
 
 <div id="inputDiv" style="visibility: @TwoChoiceVis; @PositioningStyle">
     <span id="message">@Message</span>
