--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -14,7 +14,7 @@ Required Parameters:
 @inject NavigationManager navigationManager;
 
 <title>View</title>
-<link href="/css/ViewItem.css" rel="stylesheet"/>
+<link href="/css/components/ViewItem.css" rel="stylesheet"/>
 
 @{
     if (path == "null") //If URL contains a UUID that isn't present in the database.
