add 2 new backend starring funcs

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -6,7 +6,7 @@
 
 <title>Test</title>
 
-<button style="margin-left: 50%;" @onclick="@(() => Connection.InsertMedia("tmp2", DateTime.Now))">click me</button>
+<button style="margin-left: 50%;" @onclick="@(() => UpdateStarred(@"2021\12 December\FF8EyTQWUAojmvr.jpg", true))">click me</button>
 
 @code {
    
