more progress on starred page

--- a/PSS/Pages/Starred.razor
+++ b/PSS/Pages/Starred.razor
@@ -10,24 +10,23 @@
         <button @onclick="DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
         <button><span class="material-icons-outlined">perm_media</span></button>
         <button><span class="material-icons-outlined">archive</span></button>
-        <button @onclick="@(() => starChoiceVis = "visible")"><span class="material-icons-outlined">star_outline</span></button>
+        <button title="Remove Stars From Selected" @onclick="@(() => UpdateStars(false))"><span class="material-icons-outlined">star_outline</span></button>
         <button @onclick="@(() => albumsVis = "visible")"><span class="material-icons-outlined">collections</span></button>
         <span id="selectedAmtText">@selectedItems.Count selected</span>
         <button id="clearBtn" @onclick="ClearChecks"><span class="material-icons-outlined">close</span></button>
     </header>
-    <TwoChoiceInput @bind-TwoChoiceVis="@starChoiceVis" YesBtnClick="@(SelectedRemoveStar)" NoBtnClick="@(() => starChoiceVis = "hidden")" Message="@(selectedItems.Count > 1 ? "Add or remove stars for selected items?" : "Add or remove star for selected item?")"/>
 
     <AlbumSelector SelectedItems="@selectedItems" @bind-HeaderVis="@headerVis" @bind-AlbumsVis="@albumsVis"/>
     <TwoChoiceInput @bind-TwoChoiceVis="@choiceVis" YesBtnClick="@DeleteSelected" NoBtnClick="@CloseChoiceDiv" Message="@choiceMsg"/>
 
-    if (mediaList.Count == 0)
+    if (starredList.Count == 0)
     {
         <h1>Looks empty here...<br/>Upload some items to get started.</h1>
     }
     else
     {
         <div id="mainDiv">
-            @foreach (MediaRow media in mediaList)
+            @foreach (MediaRow media in starredList)
             {
                 <div class="thumbnail">
                     <span @onclick="(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
@@ -41,7 +40,7 @@
 @code {
     private static string headerVis;
     private static string albumsVis;
-    private static List<MediaRow> mediaList;
+    private static List<MediaRow> starredList;
     private static List<string> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
 
     private static string choiceVis;
@@ -53,24 +52,21 @@
     
     private async Task getShiftDown() => shiftDown = await JSRuntime.InvokeAsync<bool>("getShiftDown");
     
-    private static string starChoiceVis;
-
-    private async void SelectedRemoveStar()
+    private async void UpdateStars(bool starred)
     {
-        starChoiceVis = "hidden";
-        UpdateStarred(selectedItems, false);
+        UpdateStarred(selectedItems, starred);
         await ClearChecks();
+        starredList = LoadStarred();
         StateHasChanged();
     }
-
+    
     protected override void OnInitialized()
     {
-        mediaList = LoadStarred();
+        starredList = LoadStarred();
         selectedItems = new List<string>(); //Reset on page load/refresh
         headerVis = "hidden";
         albumsVis = "hidden";
         choiceVis = "hidden";
-        starChoiceVis = "hidden";
     }
 
     [Inject] //https://code-maze.com/how-to-call-javascript-code-from-net-blazor-webassembly/
@@ -86,11 +82,11 @@
 
         headerVis = selectedItems.Count > 0 ? "visible" : "hidden";
 
-        //Get mediaList currentIndex of latest selected thing. Needed only for shift click
+        //Get starredList currentIndex of latest selected thing. Needed only for shift click
         int index = -1;
-        for (int i = 0; i < mediaList.Count; i++)
+        for (int i = 0; i < starredList.Count; i++)
         {
-            if (mediaList[i].path != id) continue;
+            if (starredList[i].path != id) continue;
             index = i;
             break;
         }
@@ -109,7 +105,7 @@
     {
         for (int i = startIndex; i <= endIndex; i++)
         {
-            string currentID = mediaList[i].path;
+            string currentID = starredList[i].path;
             if (selectedItems.Contains(currentID)) continue;
             selectedItems.Add(currentID);
             await ToggleCheck(currentID);
@@ -162,7 +158,7 @@
             headerVis = "hidden";
         }
         await ClearChecks();
-        mediaList = LoadMediaTable();
+        starredList = LoadMediaTable();
         StateHasChanged();
     }
 
