Change up and improve h1's and centering

--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -24,7 +24,7 @@
 
     if (mediaList.Count == 0)
     {
-        <h1>Looks empty here...<br/>Upload some items to get started.</h1>
+        <h1>Upload some items to get started</h1>
     }
     else
     {
