--- a/PSS/Pages/Starred.razor
+++ b/PSS/Pages/Starred.razor
@@ -24,7 +24,7 @@
 
     if (starredList.Count == 0)
     {
-        <h1>Looks empty here...<br/>Upload some items to get started.</h1>
+        <h1>Starred items appear here</h1>
     }
     else
     {
