--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -32,7 +32,8 @@
             @foreach (MediaRow media in mediaList)
             {
                 <div class="thumbnail">
-                    <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
+                    @if (media.starred) {<span class="material-icons-outlined star-icon">star</span>}
+                    <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons checkbox unchecked">check_circle</span>
                     <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
                 </div>
             }
@@ -59,9 +60,10 @@
 
     private async void UpdateStars(bool starred)
     {
-        starChoiceVis = "hidden";
         UpdateStarred(selectedItems, starred);
         await ClearChecks();
+        starChoiceVis = "hidden";
+        mediaList = LoadMediaTable();
         StateHasChanged();
     }
 
