--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -56,7 +56,8 @@
             @foreach (MediaRow media in albumMedia)
             {
                 <div class="thumbnail">
-                    <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons unchecked">check_circle</span>
+                    @if (media.starred) {<span class="material-icons-outlined star-icon">star</span>}
+                    <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons checkbox unchecked">check_circle</span>
                     <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" style="color: white" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
                 </div>
             }
@@ -86,9 +87,10 @@
     
     private async void UpdateStars(bool starred)
     {
-        starChoiceVis = "hidden";
         UpdateStarred(selectedItems, starred);
         await ClearChecks();
+        starChoiceVis = "hidden";
+        albumMedia = LoadAlbum(statAlbumID);
         StateHasChanged();
     }
 
